# puppy

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN-pu-extended.md  PLAN-puppy-native.md  PU_Requests.md  README.md  SPEC-mocks.md  SPEC-native.md  TODO.md  diff4.md  pyproject.toml  spec.md
.github/workflows/: test.yml
examples/: README.md  auth.yaml  description.md  images.yaml  puppy.yaml
puppy/: __main__.py  artifacts.py  auth.py  checks.py  cli.py  config.py  core.py  creator.py  errors.py  hashes.py  http.py  images.py  importer.py  init.py  parallel.py  preview.py  project_type.py  publisher.py  puller.py  renderer.py  runner.py  searcher.py  sites.py  sites_native_sketch.py  syncer.py  transformers.py  worker.py  yaml_io.py
puppy/sites/: __init__.py  base.py  curseforge.py  modrinth.py  planetminecraft.py
testpack/: pack.mcmeta
testpack/modrinth/: description.md
testpack/puppy/: description.md  puppy.yaml
testpack/puppy/images/: images.yaml
tests/: conftest.py  setup_tests.sh  test_additive_merge.py  test_after_push.py  test_artifacts.py  test_assets.py  test_auth.py  test_auth_validation.py  test_auto_slug_derivation.py  test_batch_execution.py  test_batch_index_zip_links.py  test_batch_site_filtering.py  test_batch_variable_leakage.py  test_cascade.py  test_cf.py  test_cf_native.py  test_cf_resolve_id.py  test_clean_action.py  test_cli.py  test_config.py  test_create.py  test_create_staging.py  test_cross_linking.py  test_cross_links.py  test_cross_project_links.py  test_curseforge_native_priority.py  test_discovery.py  test_dry_run_index.py  test_extension_priority.py  test_flat_mode.py  test_global_site_override.py  test_hashes.py  test_html_shielding.py  test_html_tag_replacement.py  test_html_template_respect.py  test_http.py  test_hygiene.py  test_icon_geometry.py  test_identity.py  test_image_auto_conversion.py  (+53 more)
tests/integration/: cleanup.py  conftest.py  integration-tests.md  test_cf.py  test_mr.py  test_pmc.py
tests/integration/puppy/: puppy.yaml
tests/integration/puppy/TestMod/: description.md  puppy.yaml
tests/integration/puppy/TestPack/: description.md  puppy.yaml
tests/integration/puppy/TestWorld/: description.md  puppy.yaml
(+7 files in other folders)
