[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "puppy"
dynamic = ["version"]
description = "Publish Minecraft resource packs to CurseForge, Modrinth, and Planet Minecraft"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ken Arnold", email = "arnold@peak.im" }]
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "markdown>=3.10",
    "Pillow>=12.0",
    "md2bbcode>=1.1",
    "bbcode>=1.1",
    "ruamel.yaml>=0.19",
]

[project.optional-dependencies]
test = ["pytest", "pyyaml>=6.0"]

[project.scripts]
puppy = "puppy.cli:main"

[tool.setuptools.dynamic]
version = {attr = "puppy.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["puppy*"]

[project.urls]
Repository = "https://github.com/kenarnold/puppy"
"Bug Tracker" = "https://github.com/kenarnold/puppy/issues"

[tool.ruff.format]
quote-style = "single"
